  * Fixed issue #500: Issue with node selection "from code" for disabled nodes with toLevelSelectConstraint option  
  * Fixed issue #499: Incorrect behavior with toLevelSelectConstraint and ctrl+A 
  * Fixed issue #649: Cell navigation problems with toAutoSpanColumns for left and right keys
  * Fixed issue #712: Strange behaviour of AutoFitColumns
  * Fixed issue #718: Shift + Rght-Click should not extend selection  
  
V6.6 (04 Apr 2017)
  * Fixed issue #705: Added support for RAD Studio 10.2 Tokyo
  * Fixed issue #702: Access Violation at designtime when RootNodeCount is >0
  * Fixed issue #703: Possibly wrong selection if nodes are selected during DeleteChildren()
  * Fixed issue #700: If the user clicked a node, we are no longer centering this node if the option toCenterScrollIntoView is set.
  * Fixed issue #691: When the user uses Cursor-Left/Right, the Virtual TreeView should perform horizontal scrolling if there is no other operation
  * Fixed issue #699: TVTColors.GetColor: Honor user defined colors also when StyleServices are enabled (Thx to luebbe for PR)
  * Fixed issue #698: Horizontal scrollbar may not update when turning on or off columns
  * Fixed issue #350: TVirtualTreeColumn.fLeft should be in protected part
  * Fixed issue #312: When unfocusing a node while the Spacebar is still pressed, the check state should be toggled
  * Fixed issue #161: Shift+End does not work as expected with toGridExtension + toFullRowSelect options set
  * Fixed issue #697: OnChange not fired when unselecting nodes
  * Fixed issue #692: HitInfo for OnNodeClick event may differ much from HandleMouseDown
  * Fixed issue #687 by extracting new method DeleteNodes() from existing DeleteSelectedNodes().
  * Fixed issue #689: Possible Integer overflow in PaintColumnHeader() when dragging a column to first position.
  * Fixed issue #693: TVirtualTreeAccessibility.accSelect() should handle the flag SELFLAG_EXTENDSELECTION